--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_native_splash: ^2.2.11
+  flutter_launcher_icons: ^0.10.0
+
+flutter_icons:
+  android: "launcher_icon" 
+  ios: true
+  image_path: "assets/images/Iconeapp.png"
 
 flutter_native_splash:
   color: "#f9f9f9"
